# VoronoiOpt

./: CMakeLists.txt  README.md
CVT/include/CVT/: CVT.h  CVTGenerator.h  CVTGeometry.h  CVTOptimizer.h  CVTSeedFactory.h  CellTDF.h  TetMeshFactory.h  VoronoiCell.h  VoronoiMesh.h  common.h  sampling.h  utils.h
CVT/include/CVT/experimental/: CVTAdvanced.h
output/femur/: seeds.txt  seeds.vtk
output/femur/tets/: tet0.vtk  tet1.vtk  tet10.vtk  tet100.vtk  tet101.vtk  tet102.vtk  tet103.vtk  tet104.vtk  tet105.vtk  tet106.vtk  tet107.vtk  tet108.vtk  tet109.vtk  tet11.vtk  tet110.vtk  tet111.vtk  tet112.vtk  tet113.vtk  tet114.vtk  tet115.vtk  tet116.vtk  tet117.vtk  tet118.vtk  tet119.vtk  tet12.vtk  tet120.vtk  tet121.vtk  tet122.vtk  tet123.vtk  tet124.vtk  tet125.vtk  tet126.vtk  tet127.vtk  tet128.vtk  tet129.vtk  tet13.vtk  tet130.vtk  tet131.vtk  tet132.vtk  tet133.vtk  (+600 more)
src/: CHOLMODSolver.hpp  Config.hpp  Cube.hpp  EigenLibSolver.hpp  LinSysSolver.hpp  Material.hpp  Mesh.hpp  PhysicalDomain.hpp  Topology.hpp  Triangle.hpp  Type.hpp  Utils.hpp  main.cpp
